kubernetes/aks/system/cloudbeaver/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudbeaver
  labels:
    name: cloudbeaver
