kubernetes/aks/system/cloudbeaver/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudbeaver-ingress
  namespace: cloudbeaver
  annotations:
    external-dns.alpha.kubernetes.io/target: inspection.alpha.canada.ca
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: cloudbeaver
  tls:
    - hosts:
        - cloudbeaver.inspection.alpha.canada.ca
      secretName: cloudbeaver-tls
  rules:
    - host: cloudbeaver.inspection.alpha.canada.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloudbeaver
                port:
                  number: 8978
